@@ -390,9 +390,6 @@
      2016-10-10 or (better): transform the hardcoded class to tables with
                 per-dossier (and suitable defaults) values
 
-1225 2016-10- 9 review ofo_entry_get_dataset_xxx (maybe some consolidation
-                is possible)
-
 1228 2016-10-10 Entry: have a role: exercice_open / exercice_close / normal
                 (may be useful when computing solde of an account)
 
@@ -1805,6 +1802,10 @@
 
 1224 2016-10- 9 review ofsAccountBalance API (removing not used)
      2016-10-11 done
+
+1225 2016-10- 9 review ofo_entry_get_dataset_xxx (maybe some consolidation
+                is possible)
+     2016-10-12 done
 
 1226 2016-10-10 BUG in account_archive_balance:
                 it wrongly considers also entries before the beginning of the
